examples/failing/Arrays.purs
module Main where

  import Prelude

  test = \arr -> arr !! (0 !! 0)
